chui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chui-deployment
  labels:
    app: chui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chui
  template:
    metadata:
      labels:
        app: chui
    spec:
      containers:
        - name: chui-container
          image: ghcr.io/caioricciuti/ch-ui:latest
          ports:
            - containerPort: 5521
---
apiVersion: v1
kind: Service
metadata:
  name: chui
spec:
  type: ClusterIP
  ports:
    - port: 5521
      targetPort: 5521
  selector:
    app: chui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: chui.theinci.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chui
                port:
                  number: 5521
