ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: clickhouse.theinci.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickhouse-monitoring-demo
                port:
                  number: 8123
